aws/instance.tf
resource "aws_instance" "default" {
  # ubuntu 18.04
  ami = "ami-0c30afcb7ab02233d"
  instance_type = "t2.micro"
  subnet_id = "${aws_subnet.default.id}"
  vpc_security_group_ids = ["${aws_security_group.default.id}"]
  associate_public_ip_address = true
  key_name = "default-key-pair"
  
  connection {
    type = "ssh"
    host = "${self.public_ip}"
    user = "ubuntu"
    private_key = "${file("~/.ssh/id_rsa")}"
  }
  provisioner "remote-exec" {
    scripts = [
      "scripts/docker_tf_script",
      "scripts/docker-compose_tf_script",
      "scripts/flask_tf_script"
    ]
  }
}
